ImageSize Web/Node version

--- a/octopus-fig/example-web/index.html
+++ b/octopus-fig/example-web/index.html
@@ -57,7 +57,7 @@
     window.addEventListener('DOMContentLoaded', async () => {
       const { createConverter, SourceApiReader } = OctopusFig
 
-      const designId = 'kA7FQv3NUKkkwja4RLBRC0' //'aoZAhPTVzGi1rXnU35YPVb'
+      const designId = 'aoZAhPTVzGi1rXnU35YPVb' //'kA7FQv3NUKkkwja4RLBRC0'
       const token = '376694-3ac3693b-cd97-4cd3-97b1-dc54aea109bf'
       const ids = [] //['2:2'] // ['1:2', '111:28']
 
