--- a/octopus-fig/example-web/index.html
+++ b/octopus-fig/example-web/index.html
@@ -57,9 +57,9 @@
     window.addEventListener('DOMContentLoaded', async () => {
       const { createConverter, SourceApiReader } = OctopusFig
 
-      const designId = 'aoZAhPTVzGi1rXnU35YPVb' //'kA7FQv3NUKkkwja4RLBRC0'
+      const designId = 'aoZAhPTVzGi1rXnU35YPVb'// 'WfetgXUknoxDzmN1m5kRTA' //'kA7FQv3NUKkkwja4RLBRC0'
       const token = '376694-3ac3693b-cd97-4cd3-97b1-dc54aea109bf'
-      const ids = [] //['2:2'] // ['1:2', '111:28']
+      const ids = ['41-3'] //['2:2'] // ['1:2', '111:28']
 
       const readerOptions = {
         designId,
