--- a/octopus-fig/example-web/index.html
+++ b/octopus-fig/example-web/index.html
@@ -59,7 +59,7 @@
 
       const designId = 'aoZAhPTVzGi1rXnU35YPVb'// 'WfetgXUknoxDzmN1m5kRTA' //'kA7FQv3NUKkkwja4RLBRC0'
       const token = '376694-3ac3693b-cd97-4cd3-97b1-dc54aea109bf'
-      const ids = ['41-3'] //['2:2'] // ['1:2', '111:28']
+      const ids = [] 
 
       const readerOptions = {
         designId,
