--- a/packages/figma-source-plugin/src/ui.html
+++ b/packages/figma-source-plugin/src/ui.html
@@ -1,17 +1,12 @@
-<h2>OpenDesign Plugin</h2>
+<h2>Octopus Plugin</h2>
 
-<button id="copy" data-clipboard-text="Just because you can doesn't mean you should — clipboard.js">
-  Copy to clipboard
-</button>
+<button id="copy">Copy</button>
+<button id="hidden" hidden=true data-clipboard-text="">HIDDEN</button>
 <br />
-<p>Selection count:</p>
-<p id="count">init</p>
+<p>Selection count: <b id="count">init</b></p>
 <code id="text">init</code>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.10/clipboard.min.js"></script>
-<script>
-  new ClipboardJS('#copy')
-</script>
 <script>
   // const eventListeners: { type: String; callback: Function }[] = [];
   // export const dispatch = (action: String, data?: any) => {
@@ -28,46 +23,63 @@
   // 		}
   // 	}
   // };
+  function sleep(ms) { return new Promise((resolve) => { setTimeout(() => { resolve() }, ms) }) }
 
-  document.getElementById('copy').onclick = () => {
-    const data = 'TODO DATA' // TODO
-    parent.postMessage({ pluginMessage: { action: 'copy', data } }, '*')
+
+  const clipboard = new ClipboardJS('#hidden')
+  // console.info('CLIPBOARD', clipboard) // TODO
+  clipboard.on('success', async (e) => {
+    console.info('CLIPBOARD SUCCESS', e) // TODO
+    await sleep(100) // need to sleep a while to make sure the clipboard is updated before closing
+    parent.postMessage({ pluginMessage: { action: 'CLOSE' } }, '*')
+  })
+  clipboard.on('error', async (e) => {
+    console.info('CLIPBOARD ERROR', e) // TODO
+    parent.postMessage({ pluginMessage: { action: 'CLOSE' } }, '*')
+  })
+
+
+
+  const copyElem = document.getElementById('copy')
+  copyElem.onclick = async () => {
+    // console.info('HERE Copying...') // TODO
+    copyElem.innerText = 'Copying...'
+    copyElem.setAttribute('disabled', true)
+    await sleep(20) // need to sleep a while to update the copy button
+    parent.postMessage({ pluginMessage: { action: 'COPY_PRESSED' } }, '*')
   }
 
-  // document.getElementById('cancel').onclick = () => {
-  //   parent.postMessage({ pluginMessage: { action: 'close' } }, '*')
-  // }
-
-  window.onfocus = () => {
-    console.info('ON FOCUS')
-  }
-
-  window.onblur = () => {
-    console.info('ON BLUR')
-  }
-
+  // window.onfocus = () => { console.info('ON FOCUS') }
+  // window.onblur = () => { console.info('ON BLUR') }
   // window.onfocus = () => dispatch("windowFocus", true);
   // window.onblur = () => dispatch("windowFocus", false);
 
-  onmessage = (event) => {
+  onmessage = async (event) => {
     const message = event.data.pluginMessage
+    console.info('MESSAGE', message.action, message)
 
-    console.info('message', message)
-
-    if (message.action === 'selectionchange') {
+    if (message.action === 'SELECTION_CHANGE') {
       const source = message.data
       const selectionLength = source?.context?.selectedContent?.length ?? 0
-
+      const selectionNames = selectionLength > 0 ? source?.context?.selectedContent?.map(c => c.name).join(`\n`) : ''
+      
       const countElem = document.getElementById('count')
       countElem.innerText = selectionLength
 
-      const sourceString = JSON.stringify(source, null, 2)
-
       const textElem = document.getElementById('text')
-      textElem.innerText = sourceString
+      textElem.innerText = selectionNames
+    }
 
-      const copyElem = document.getElementById('copy')
-      copyElem.setAttribute('data-clipboard-text', sourceString)
+    if (message.action === 'COPY_RESPONSE') {
+      const source = message.data
+
+      const hiddenElem = document.getElementById('hidden')
+      // hiddenElem.setAttribute('data-clipboard-text', JSON.stringify(source))
+      hiddenElem.setAttribute('data-clipboard-text', source)
+
+      // await sleep(500)
+      // console.info('XXX hiddenElem length', hiddenElem.getAttribute('data-clipboard-text').length)
+      hiddenElem.click()
     }
   }
 </script>
