--- a/packages/octopus-fig/examples/web/index-api.html
+++ b/packages/octopus-fig/examples/web/index-api.html
@@ -10,9 +10,7 @@
   <div style="width: 100px; height: 100px; border: 1px solid red;" id="xxx"></div>
   <script src="./octopus-fig-web.umd.js"></script>
   <script>
-
-    // Check main thread lags
-    let i = 0
+    let i = 0 // Check main thread lags
     setInterval(() => { xxx.style.transform = `rotate(${ i += 5 }deg)` }, 30)
 
     window.addEventListener('DOMContentLoaded', async () => {
