prepare for demo

--- a/packages/octopus-psd/examples/web/index-api.html
+++ b/packages/octopus-psd/examples/web/index-api.html
@@ -20,7 +20,7 @@
         try {
           const converter = createConverter()
 
-          const reader = new PSDFileReaderWeb(readerOptions)
+          const reader = await PSDFileReaderWeb.withRenderer(readerOptions)
           const sourceDesign = await reader.getSourceDesign()
 
           if (sourceDesign === null) {
