--- a/packages/octopus-ai/examples/web/index.html
+++ b/packages/octopus-ai/examples/web/index.html
@@ -8,7 +8,5 @@
 
     <script type="module" crossorigin src="./index.ts"></script>
   </head>
-  <body>
-    <div style="width: 100px; height: 100px; border: 1px solid red" id="xxx"></div>
-  </body>
+  <body></body>
 </html>
