--- a/packages/octopus-fig/examples/web/index-api.html
+++ b/packages/octopus-fig/examples/web/index-api.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div style="width: 100px; height: 100px; border: 1px solid red;" id="xxx"></div>
-  <script src="./octopus-fig-web.umd.js"></script>
+  <script src="../../release/web-umd.js"></script>
   <script>
     let i = 0 // Check main thread lags
     setInterval(() => { xxx.style.transform = `rotate(${ i += 5 }deg)` }, 30)
